starting with cleanup

--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -1,19 +1,12 @@
 [[custom-ssl]]
 = Using a Custom SSL Certificate
 
-
-
-
-
-
-The following section will guide you through using a custom certificate with {productname} {productnumber} and {susemgrproxy} {productnumber}.
-
+The following section will guide you through using a custom certificate with {productname} and {susemgrproxy}.
 
 
 
 [[bp.cert.custom.req]]
 == Prerequisites
-
 
 The following list provides requirements for using a custom certificate.
 
@@ -21,7 +14,6 @@ The following list provides requirements for using a custom certificate.
 * A Web server SSL private key file
 * A Web server SSL public certificate file
 * Key and Certificate files must be in PEM format
-
 
 .Hostname and SSL Keys
 [IMPORTANT]
