--- a/adoc/entities.adoc
+++ b/adoc/entities.adoc
@@ -19,6 +19,7 @@
 :webui: Web UI
 :sles-version: 12
 :sp-version: SP4
+:sp-ver: 4
 :sp-version-l: sp4
 :jeos: JeOS
 :scc: SUSE Customer Center
@@ -34,6 +35,7 @@
 :upgrade: Upgrade Guide
 :yast: YaST
 :rootuser: root
+:prompt.root: # 
 :mdash: -
 :rhela: RHEL
 :ubuntu: Ubuntu
@@ -45,7 +47,6 @@
 :openscap: OpenSCAP
 :uarr:
 :ncc: Novell Customer Center
-:sp-ver: {sp-version}
 :smtool: {rmtool}
 :rmtool: Repository Management Tool
 :vmguest: VM Guest
