--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -56,6 +56,6 @@ This table gives an overview of required ports, to be used when you are setting 
 
 For more information on disconnected setup and port configuration, see:
 
-* xref:client-configuration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[Disconnected Setup]]
+* xref:client-configuration:disconnected-setup.adoc#client-cfg-reg-with-bootstrap-disconnected[Disconnected Setup]
 
 * xref:installation:ports.adoc[Ports]
