--- a/modules/administration/pages/mirror-sources.adoc
+++ b/modules/administration/pages/mirror-sources.adoc
@@ -15,7 +15,7 @@ Mirroring source packages can consume a significant amount of disk space.
 ----
 server.sync_source_packages = 1
 ----
-. Restart the spacewalk service to pick up the changes:
+. Restart the Spacewalk service to pick up the changes:
 +
 
 ----
