--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -1,14 +1,10 @@
 [[backup-restore]]
 = Backup and Restore
 
-
-
-
 Back up your {productname} installation regularly, in order to prevent data loss.
 Because {productname} relies on a database as well as the installed program and configurations, it is important to back up all components of your installation.
 This chapter contains information on the files you need to back up, and introduces the [command]``smdba`` tool to manage database backups.
 It also contains information about restoring from your backups in the case of a system failure.
-
 
 .Backup Space Requirements
 [IMPORTANT]
@@ -17,13 +13,13 @@ Regardless of the backup method you use, you must have available at least three 
 Running out of space can result in backups failing, so check this often.
 ====
 
-== Backing up {productname}
 
+
+== Backing up {productname}
 
 The most comprehensive method for backing up your {productname} installation is to back up the relevant files and directories.
 This can save you time in administering your backup, and can be faster to reinstall and re-synchronize in the case of failure.
 However, this method requires significant disk space and could take a long time to perform the backup.
-
 
 [NOTE]
 ====
@@ -62,16 +58,16 @@ You will also need to have saved a copy of the ``id-susemanager`` key.
 * [path]``/var/lib/Kiwi``
 * [path]``/var/lib/rhn/``
 * [path]``/var/spacewalk/``
-* Plus any directories containing custom data such as scripts, Kickstart profiles, AutoYaST, and custom RPMs.
-
+* Plus any directories containing custom data such as scripts, Kickstart or AutoYaST profiles, and custom RPMs.
 
 [IMPORTANT]
 ====
-You will also need to back up your database, which you can do by using the [command]``smdba`` tool, which is explained in <<bp.sect.backup.smdba.admin>>.
+You will also need to back up your database, which you can do with the [command]``smdba`` tool.  The [command]``smdba`` tool is explained in <<bp.sect.backup.smdba.admin>>.
 ====
 
 .Procedure: Restore from a Manual Backup
-. Re-install {productname}.  For more information, see <<config-smdb.recover-root>>.
+. Re-install {productname}.
+For more information, see <<config-smdb.recover-root>>.
 . Re-synchronize your {productname} repositories with the [command]``mgr-sync`` tool.
 For more information about the [command]``mgr-sync`` tool, see <<syncing.suse.mgr.repositories.scc>>.
 . You can choose to re-register your product, or skip the registration and SSL certificate generation sections.
@@ -84,13 +80,15 @@ rhn-search cleanindex
 +
 This command produces only debug messages.
 It does not produce error messages.
-. If you did not have [path]``/var/spacewalk/packages/`` in your backup, but the source repository still exists, you can restore it by performing a complete channel synchronization with:
+. Check whether you must restore [path]``/var/spacewalk/packages/``.
+It can be neccessary if you did not have in your backup.
+If the source repository still available, you can restore [path]``/var/spacewalk/packages/`` with a complete channel synchronization:
 +
 ----
 mgr-sync refresh --refresh-channels
 ----
 +
-You can check the progress by running [command]``tail -f /var/log/rhn/reposync/``<CHANNEL_NAME>``.log`` as _root_.
+Check the progress by running [command]``tail -f /var/log/rhn/reposync/``<CHANNEL_NAME>``.log`` as _root_.
 
 
 
