Admin mirror source content review10 #8361 ke (#619)
* cleanup https://github.com/SUSE/spacewalk/issues/8361
* add + connectors within items

--- a/modules/administration/pages/mirror-sources.adoc
+++ b/modules/administration/pages/mirror-sources.adoc
@@ -10,10 +10,14 @@ Mirroring source packages can consume a significant amount of disk space.
 
 .Procedure: Mirroring Source Packages
 . Open the [filename]``/etc/rhn/rhn.conf`` configuration file, and add this line:
++
+
 ----
 server.sync_source_packages = 1
 ----
-. Restart the spacewalk service to pick up the changes:
+. Restart the Spacewalk service to pick up the changes:
++
+
 ----
 spacewalk-service restart
 ----
