--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -63,7 +63,8 @@ You will also need to have saved a copy of the ``id-susemanager`` key.
 
 [IMPORTANT]
 ====
-You will also need to back up your database, which you can do with the [command]``smdba`` tool.  The [command]``smdba`` tool is explained in <<bp.sect.backup.smdba.admin>>.
+You will also need to back up your database, which you can do with the [command]``smdba`` tool.  
+For more information about the [command]``smdba`` tool, see xref:administration:backup-restore.adoc[].
 ====
 
 .Procedure: Restore from a Manual Backup
